src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

.selected {
    color:#1890ff !important;
}

button {
    text-align: left !important;
    overflow: hidden !important;
}

.ant-progress {
    position:absolute;
    left:1px;
    margin-right:1px;
    top:17px;
}
.ant-progress-line {
    width: calc(100% - 2px) !important;
    position:absolute !important;
}

.fade-in-enter {
    opacity:0;
}
.fade-in-enter-active {
    opacity: 1;
    transition: opacity 750ms;
}

